--- a/index.html
+++ b/index.html
@@ -1984,7 +1984,7 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { 
       getFirestore, collection, addDoc, getDocs, onSnapshot, 
-      deleteDoc, doc, updateDoc, query, where, getDoc, setDoc // Добавлен setDoc
+      deleteDoc, doc, updateDoc, query, where, getDoc, setDoc, orderBy
     } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
     import { 
       getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged 
