--- a/index.html
+++ b/index.html
@@ -2066,6 +2066,9 @@
     const dayDetailsTitle = document.getElementById('dayDetailsTitle');
     const dayDetailsContent = document.getElementById('dayDetailsContent');
     const closeDayDetailsModalBtn = document.getElementById('closeDayDetailsModal');
+    // Модалка с деталями администраторов за день
+    const adminDayDetailsModal = document.getElementById('adminDayDetailsModal');
+    const closeAdminDayDetailsModalBtn = document.getElementById('closeAdminDayDetailsModal');
 
     // --- Расчет зарплаты ---
     const salarySection = document.getElementById('salarySection'); // Секция ЗП
