Все ссылки на Яндекс Карты обновлены
Обновлено:
Кнопка "Отправить локацию" — теперь ведет на https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713
Кнопка "Поделиться отзывами" — теперь ведет на https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713/reviews/?ll
Виджет карты — обновлен ID организации в iframe (oid=5361992713)
Виджет отзывов — обновлен ID организации в iframe (5361992713)
Ссылки в подвалах виджетов — обновлены на новую карточку организации
Все старые ссылки (с ID 180466118783 и CHCriIOU) заменены на новые. Изменения применены в обеих версиях кода (десктоп и мобильная).

--- a/index.html
+++ b/index.html
@@ -1264,14 +1264,14 @@
               <i class="fas fa-map-marker-alt text-red-600 text-2xl mr-3"></i>
               <h3 class="text-xl font-semibold text-gray-900 tracking-tight">Мы на карте</h3>
             </div>
-            <button class="share-button" onclick="openShareModal('maps', 'https://yandex.ru/maps/-/CHCriIOU')">
+            <button class="share-button" onclick="openShareModal('maps', 'https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713')">
               <i class="fas fa-map-pin"></i>
               Отправить локацию
             </button>
           </div>
           <div class="flex-grow flex items-center justify-center">
             <iframe 
-              src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=180466118783" 
+              src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=5361992713" 
               width="100%" 
               height="600" 
               frameborder="0"
@@ -1287,7 +1287,7 @@
               <i class="fas fa-star text-yellow-500 text-2xl mr-3"></i>
               <h3 class="text-xl font-semibold text-gray-900 tracking-tight">Отзывы клиентов</h3>
             </div>
-            <button class="share-button" onclick="openShareModal('reviews', 'https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/reviews')">
+            <button class="share-button" onclick="openShareModal('reviews', 'https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713/reviews/?ll')">
               <i class="fas fa-star"></i>
               Поделиться отзывами
             </button>
@@ -1297,10 +1297,10 @@
               <iframe 
                 class="widget-iframe"
                 style="width:100%;height:100%;border:1px solid #e6e6e6;box-sizing:border-box" 
-                src="https://yandex.ru/maps-reviews-widget/180466118783?comments">
+                src="https://yandex.ru/maps-reviews-widget/5361992713?comments">
               </iframe>
               <a 
-                href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/" 
+                href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713" 
                 target="_blank" 
                 style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">
                 VR Lounge - Игровой Рай на карте Кольчугино — Яндекс Карты
@@ -1839,14 +1839,14 @@
             <i class="fas fa-map-marker-alt text-red-600 text-2xl mr-3"></i>
             <h3 class="text-xl font-semibold text-gray-900 tracking-tight">Мы на карте</h3>
           </div>
-          <button class="share-button" onclick="openShareModal('maps', 'https://yandex.ru/maps/-/CHCriIOU')">
+          <button class="share-button" onclick="openShareModal('maps', 'https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713')">
             <i class="fas fa-map-pin"></i>
             Отправить локацию
           </button>
         </div>
         <div class="flex-grow flex items-center justify-center">
           <iframe 
-            src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=180466118783" 
+            src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=5361992713" 
             width="100%" 
             height="600" 
             frameborder="0"
@@ -1862,7 +1862,7 @@
             <i class="fas fa-star text-yellow-500 text-2xl mr-3"></i>
             <h3 class="text-xl font-semibold text-gray-900 tracking-tight">Отзывы клиентов</h3>
           </div>
-          <button class="share-button" onclick="openShareModal('reviews', 'https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/reviews')">
+          <button class="share-button" onclick="openShareModal('reviews', 'https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713/reviews/?ll')">
             <i class="fas fa-star"></i>
             Поделиться отзывами
           </button>
@@ -1872,10 +1872,10 @@
             <iframe 
               class="widget-iframe"
               style="width:100%;height:100%;border:1px solid #e6e6e6;box-sizing:border-box" 
-              src="https://yandex.ru/maps-reviews-widget/180466118783?comments">
+              src="https://yandex.ru/maps-reviews-widget/5361992713?comments">
             </iframe>
             <a 
-              href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/" 
+              href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/5361992713" 
               target="_blank" 
               style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">
               VR Lounge - Игровой Рай на карте Кольчугино — Яндекс Карты
